unpackaged/main/default/objects/Passport_Credits__c/Passport_Credits__c.object-meta.xml
<CustomObject>
    <label>Passport Credits</label>
    <nameField>
        <label>Passport Credits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passport Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>