unpackaged/main/default/objects/Passport_Credits__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Passport Credits</relationshipLabel>
    <relationshipName>Passport_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>