unpackaged/main/default/objects/Passport_Credits__c/fields/Credits_Used__c.field-meta.xml
<CustomField>
    <fullName>Credits_Used__c</fullName>
    <label>Credits Used</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>