unpackaged/main/default/objects/Passport_Credits__c/fields/Resource_Booking__c.field-meta.xml
<CustomField>
    <fullName>Resource_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource ID</label>
    <referenceTo>ResourceBooking__c</referenceTo>
    <relationshipLabel>Passport Credits</relationshipLabel>
    <relationshipName>Passport_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>