unpackaged/main/default/objects/Passport_Credits__c/fields/Training_Booking__c.field-meta.xml
<CustomField>
    <fullName>Training_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training ID</label>
    <referenceTo>TrainingBooking__c</referenceTo>
    <relationshipLabel>Passport Credits</relationshipLabel>
    <relationshipName>Passport_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>